STEP 5/OPA Usecases/No Namespaces in Service Account/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sroleauth
spec:
  crd:
    spec:
      names:
        kind: K8sRoleAuth
      validation:
              openAPIV3Schema:
                      properties:
                              namespaces:
                                      type: array
                                      items:
                                              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
       package k8sroleauth
       violation[{ "msg": msg}]{
         #input.review.object.kind == "ServiceAccount"         #Checks if the kind is "ServiceAccount"
         #namespace := input.review.object.metadata.namespace  #Stores the namespace in a variable
         #allowed_namespace := input.parameters.namespaces[_]  #Stores the list of allowed paths from the parameter in a variable
         #not contains(allowed_namespace,namespace)            #Returns true if the used namespace is not in the list of allowed namespaces
         #msg := "not allowed" }                               #Deny message
